--- a/iMatMini/src/iMat/FXML/ProductItem.fxml
+++ b/iMatMini/src/iMat/FXML/ProductItem.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="290.0" prefWidth="188.0" stylesheets="@../css/productItem.css" type="AnchorPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="productItemAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="290.0" prefWidth="188.0" stylesheets="@../css/productItem.css" type="AnchorPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane layoutX="10.0" layoutY="8.0" prefHeight="130.0" prefWidth="167.0">
          <children>
@@ -36,12 +36,12 @@
                   </AnchorPane>
                </children>
             </StackPane>
-            <ImageView fx:id="productImageView" fitHeight="122.0" fitWidth="126.0" layoutX="37.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="ecoFriendlyImageView" fitHeight="34.0" fitWidth="35.0" layoutX="-1.0" layoutY="34.0" pickOnBounds="true" />
+            <ImageView fx:id="productImageView" fitHeight="130.0" fitWidth="136.0" layoutX="37.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <image>
                   <Image url="@../resources/empty_image.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="ecoFriendlyImageView" fitHeight="34.0" fitWidth="35.0" layoutX="-1.0" layoutY="34.0" pickOnBounds="true" />
          </children>
          <styleClass>
             <String fx:value="whiteBackGround" />
