--- a/iMatMini/src/iMat/FXML/ProductItem.fxml
+++ b/iMatMini/src/iMat/FXML/ProductItem.fxml
@@ -16,7 +16,7 @@
          <children>
             <StackPane prefHeight="37.0" prefWidth="34.0">
                <children>
-                  <AnchorPane fx:id="favoritedAnchorPane" onMouseClicked="#onRemoveFavoriteEvent" prefHeight="200.0" prefWidth="200.0">
+                  <AnchorPane fx:id="favoritedAnchorPane"  prefHeight="200.0" prefWidth="200.0">
                      <children>
                         <ImageView fitHeight="34.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -25,7 +25,7 @@
                         </ImageView>
                      </children>
                   </AnchorPane>
-                  <AnchorPane fx:id="unFavoritedAnchorPane" onMouseClicked="#onAddFavoriteEvent" prefHeight="200.0" prefWidth="200.0">
+                  <AnchorPane fx:id="unFavoritedAnchorPane" prefHeight="200.0" prefWidth="200.0">
                      <children>
                         <ImageView fitHeight="34.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -67,12 +67,12 @@
                         <Font size="13.0" />
                      </font>
                   </TextField>
-                  <ImageView fitHeight="34.0" fitWidth="34.0" layoutX="17.0" layoutY="8.0" onMouseClicked="#onRemoveClickEvent" pickOnBounds="true" styleClass="button">
+                  <ImageView fitHeight="34.0" fitWidth="34.0" layoutX="17.0" layoutY="8.0" pickOnBounds="true" styleClass="button">
                      <image>
                         <Image url="@../resources/MinusButton.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="34.0" fitWidth="34.0" layoutX="129.0" layoutY="8.0" onMouseClicked="#onAddClickEvent" pickOnBounds="true">
+                  <ImageView fitHeight="34.0" fitWidth="34.0" layoutX="129.0" layoutY="8.0"  pickOnBounds="true">
                      <image>
                         <Image url="@../resources/PlusButton.png" />
                      </image>
@@ -81,7 +81,7 @@
             </AnchorPane>
             <AnchorPane fx:id="addProductAnchorPane" prefHeight="50.0" prefWidth="185.0" styleClass="whiteGreyBackGround">
                <children>
-                  <Button fx:id="addButton" layoutX="13.0" layoutY="7.0" mnemonicParsing="false" onMouseClicked="#onAddClickEvent" prefHeight="34.0" prefWidth="148.0" styleClass="addButton" text="Lägg till" />
+                  <Button fx:id="addButton" layoutX="13.0" layoutY="7.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="148.0" styleClass="addButton" text="Lägg till" />
                </children>
             </AnchorPane>
          </children>
