Can add / remove favorites again

--- a/iMatMini/src/iMat/FXML/ProductItem.fxml
+++ b/iMatMini/src/iMat/FXML/ProductItem.fxml
@@ -10,13 +10,13 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root fx:id="productItemAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="290.0" prefWidth="188.0" stylesheets="@../css/productItem.css" type="AnchorPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="productItemAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="290.0" prefWidth="188.0" stylesheets="@../css/productItem.css" type="AnchorPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane layoutX="10.0" layoutY="8.0" prefHeight="130.0" prefWidth="167.0">
          <children>
             <StackPane prefHeight="37.0" prefWidth="34.0">
                <children>
-                  <AnchorPane fx:id="favoritedAnchorPane"  prefHeight="200.0" prefWidth="200.0">
+                  <AnchorPane fx:id="favoritedAnchorPane" onMouseClicked="#removeFavoriteEvent" prefHeight="200.0" prefWidth="200.0">
                      <children>
                         <ImageView fitHeight="34.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -25,7 +25,7 @@
                         </ImageView>
                      </children>
                   </AnchorPane>
-                  <AnchorPane fx:id="unFavoritedAnchorPane" prefHeight="200.0" prefWidth="200.0">
+                  <AnchorPane fx:id="unFavoritedAnchorPane" onMouseClicked="#addFavoriteEvent" prefHeight="200.0" prefWidth="200.0">
                      <children>
                         <ImageView fitHeight="34.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -67,12 +67,12 @@
                         <Font size="13.0" />
                      </font>
                   </TextField>
-                  <ImageView fitHeight="34.0" fitWidth="34.0" layoutX="17.0" layoutY="8.0" pickOnBounds="true" styleClass="button">
+                  <ImageView fitHeight="34.0" fitWidth="34.0" layoutX="17.0" layoutY="8.0" onMouseClicked="#removeProductClickEvent" pickOnBounds="true" styleClass="button">
                      <image>
                         <Image url="@../resources/MinusButton.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="34.0" fitWidth="34.0" layoutX="129.0" layoutY="8.0"  pickOnBounds="true">
+                  <ImageView fitHeight="34.0" fitWidth="34.0" layoutX="129.0" layoutY="8.0" onMouseClicked="#addProductClickEvent" pickOnBounds="true">
                      <image>
                         <Image url="@../resources/PlusButton.png" />
                      </image>
@@ -81,7 +81,7 @@
             </AnchorPane>
             <AnchorPane fx:id="addProductAnchorPane" prefHeight="50.0" prefWidth="185.0" styleClass="whiteGreyBackGround">
                <children>
-                  <Button fx:id="addButton" layoutX="13.0" layoutY="7.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="148.0" styleClass="addButton" text="Lägg till" />
+                  <Button layoutX="13.0" layoutY="7.0" mnemonicParsing="false" onMouseClicked="#addProductClickEvent" prefHeight="34.0" prefWidth="148.0" styleClass="addButton" text="Lägg till" />
                </children>
             </AnchorPane>
          </children>
