--- a/iMatMini/src/iMat/FXML/ProductDescription.fxml
+++ b/iMatMini/src/iMat/FXML/ProductDescription.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -90,11 +91,6 @@
                               <Font name="Arial" size="25.0" />
                            </font>
                         </Label>
-                        <ImageView fx:id="star_unmarked" fitHeight="50.0" fitWidth="50.0" layoutX="287.0" layoutY="222.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../resources/star_unmarked.png" />
-                           </image>
-                        </ImageView>
                         <Separator layoutX="50.0" layoutY="370.0" prefWidth="600.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="52.0" />
                         <Separator layoutX="50.0" layoutY="500.0" prefWidth="600.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="52.0" />
                         <Label layoutX="205.0" layoutY="330.0" prefHeight="36.0" prefWidth="302.0" text="Relaterade Produkter" AnchorPane.bottomAnchor="174.0">
@@ -107,6 +103,37 @@
                               <Image url="@../resources/icon_close.png" />
                            </image>
                         </ImageView>
+                        <StackPane layoutX="286.0" layoutY="227.0" prefHeight="37.0" prefWidth="34.0" AnchorPane.bottomAnchor="275.6666666666667" AnchorPane.rightAnchor="378.6666666666667">
+                           <children>
+                              <AnchorPane fx:id="favoritedAnchorPane" onMouseClicked="#removeFavoriteEvent" prefHeight="200.0" prefWidth="200.0">
+                                 <children>
+                                    <ImageView fitHeight="34.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../resources/star_marked.jpg" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </AnchorPane>
+                              <AnchorPane fx:id="unFavoritedAnchorPane" onMouseClicked="#addFavoriteEvent" prefHeight="200.0" prefWidth="200.0">
+                                 <children>
+                                    <ImageView fitHeight="34.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../resources/star_unmarked.jpg" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </AnchorPane>
+                           </children>
+                        </StackPane>
+                        <Label fx:id="ecoLabel" alignment="TOP_LEFT" layoutX="149.0" layoutY="233.0" prefHeight="25.0" prefWidth="126.0" textFill="#292c2b" wrapText="true" AnchorPane.bottomAnchor="281.6666666666667">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                           <styleClass>
+                              <String fx:value="text-normal" />
+                              <String fx:value="text-eco" />
+                           </styleClass>
+                        </Label>
                      </children>
                      <opaqueInsets>
                         <Insets />
